feat: add MUI icons validation script and npm script for preventing import errors

--- a/DataExtraction/frontend/package.json
+++ b/DataExtraction/frontend/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.6.2",
     "d3": "^7.8.5",
     "date-fns": "^4.1.0",
-    "framer-motion": "^5.5.5",
+    "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
@@ -41,7 +41,8 @@
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "check:mui-icons": "node scripts/check-mui-icons.js"
   },
   "eslintConfig": {
     "extends": [
@@ -49,7 +50,6 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:3001",
   "browserslist": {
     "production": [
       ">0.2%",
